--- a/ExpandableListView/ExpandableListView/ExpandableListView.csproj
+++ b/ExpandableListView/ExpandableListView/ExpandableListView.csproj
@@ -94,7 +94,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="17.2.0.40" />
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="18.4.0.41" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.617" />
   </ItemGroup>
 </Project>
